labs/iperf3/alpine-vf.yaml
apiVersion: v1
kind: Pod
metadata:
  ame: alpine1
  annotations:
    k8s.v1.cni.cncf.io/networks: vf-internal
spec:
  nodeSelector:
    kubernetes.io/hostname: rome1
  containers:
  - image: alpine
    command: ["sleep", "infinity"]
    imagePullPolicy: IfNotPresent
    name: alpine
    securityContext:
      privileged: true
      runAsUser: 0
    resources:
      limits:
        nvidia.com/bf3_p0_vf: "1"
      requests:
        nvidia.com/bf3_p0_vf: "1"
