labs/iperf3/gateway-lb-l4route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: f5-gateway-class
spec:
  controllerName: "f5.com/default-f5-cne-controller"
  description: "F5 BIG-IP Kubernetes Gateway"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: f5-l4-gateway
  namespace: default
spec:
  gatewayClassName: f5-gateway-class
  infrastructure:
    parametersRef:
      group: k8s.f5net.com
      kind: F5BnkGateway
      name: f5-bnkgateway
  listeners:
    - name: tcp-5201
      protocol: TCP
      port: 5201
      allowedRoutes:
        kinds:
          - kind: L4Route
            group: gateway.k8s.f5net.com
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3-backend
  namespace: iperf3
spec:
  clusterIP: None
  ports:
    - name: tcp-5201
      port: 5201
      targetPort: 5201
